# vif-trading-system

./: .ai-context.yaml  .env.bak  .env.example  .gitignore  AGENTS.md  ANALYSIS_COMPLETE.md  AUTONOMOUS_SETUP_GUIDE.md  CLAUDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.txt  FINVIZ_IMPLEMENTATION_COMPLETE.md  FINVIZ_INTEGRATION_ARCHITECTURE.md  HANDOFF_TO_LEAD_ORCHESTRATOR.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  LAPTOP_SYNC.ps1  OBE_UPS_OPTIONS_SUMMARY.md  OBSERVABILITY_IMPLEMENTATION_COMPLETE.md  ONBOARDING.md  OPERATIONAL_HANDOFF.txt  OPTIONS_STRATEGY_RECOMMENDATIONS.md  ORCHESTRATOR_QUICKSTART.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SESSION_FINDINGS_REPORT.md  SESSION_HANDOFF_AUTORESEARCH.md  SESSION_HANDOFF_CRITICAL_FIXES.md  SESSION_HANDOFF_FINVIZ.md  SESSION_HANDOFF_SCREENER.md  SESSION_HANDOFF_SIGNAL_VALIDATOR.md  SESSION_SUMMARY_20260509.md  SETUP.md  SKILLS.md  SWARM_ARCHITECTURE_VISUAL.md  SWING_TRADES_DELIVERY_SUMMARY.md  SWING_TRADES_QUICK_REFERENCE.md  SYNC.md  SYSTEM_CONTEXT_PATCH.md  SYSTEM_MANIFEST.json  (+28 more)
.claude/: AGENT_REFERENCE.md  RECOVERY_CHECKPOINT_2026-05-13.md  SWARM_IDE_LAYOUT.md  VIF_v4_WORKFLOW_DIAGRAM.md  settings.json  settings.local.json
.githooks/: pre-commit
agents/: agent_manager_fix.py  claude_research_agent.py  external_alpha_auditor.py  finviz_orchestrator_coordinator.py  finviz_screener_agent.py  indicators.py  orchestrator.py  orchestrator_swarm.py  report_ui_agent.py  test_harness.py  watchlist_watcher.py  weekend_catalyst_agent.py
config/: cache_config.yml  finviz_screeners.yml  prompts_compiled.json  vif_config.yml
data/: alpha-patterns.md  finviz_screening_catalog.json  options_greeks_cache.json
docs/: AGENT_MANAGER_FIX.md  DEPLOYMENT_STATUS.md  FINVIZ_COMMAND_REFERENCE.md  FINVIZ_SCREENER_EXECUTION_PLAN.md  FINVIZ_SWARM_INTEGRATION_GUIDE.md  FOLDER_OPERATIONS_CHECKLIST.md  GITHUB_AGENT_WORKFLOW_STATUS.md  GITHUB_MCP_SETUP.md  IMPROVEMENT_RECOMMENDATIONS.md  INDEX.md  LAPTOP_SETUP.md  MARKET_DATA_SOURCE_ANALYSIS.md  MASTER_DOCUMENTATION_INDEX.md  META_TOOLS_GUIDE.md  OBSERVABILITY_GUIDE.md  OBSERVABILITY_INDEX.md  OBSERVABILITY_QUICK_START.md  PHASE_1_3_IMPLEMENTATION.md  PHASE_4_DEPLOYMENT_SUMMARY.md  POWER_BI_DASHBOARD_ROADMAP.html  POWER_BI_DASHBOARD_ROADMAP.md  QUICKSTART.md  QUICK_START_FRIDAY_PREP.md  RECOMMENDATIONS_SUMMARY.md  SKILLS.md  SWARM_ORCHESTRATOR_GUIDE.md  SYSTEM_CONTEXT.md  SYSTEM_CONTEXT.md.tmp  SYSTEM_HEALTH.md  Session-Log-2026-05-04-to-05.md  TA_LIBRARY_INTEGRATION_COMPLETE.md  TODAYS_REPORTS_SUMMARY.md  TOP_10_SWARM_PROMPT_TRIGGERS.md  TradingView-MCP-Setup.md  orchestrator_framework.md  session-2026-05-13-sync-setup.md  ~$ASE_4_DEPLOYMENT_SUMMARY.md  ~$INDEX.md  ~$STEM_CONTEXT.md  ~$THUB_MCP_SETUP.md  (+2 more)
examples/: observability_examples.py  watchlist_watcher_with_caching_example.py
reports/: COMPREHENSIVE_ANALYSIS_SUMMARY.md  SWING_TRADE_RECOMMENDATIONS.md  advanced_analysis_20260428_052956.json  analysis_20260428_051142.json  catalyst_analysis_20260428_053140.json  daily_watchlist_20260428_140307.json  options_analysis_20260428_144822.json  swing_setups_20260428_141038.json  swing_trade_screener_20260428_140936.json  test_analysis.json
research/: dspy_compiler.py
scripts/: activate_agent_env.py  build_daily_master_report.py  setup_hooks.ps1  (+13 more)
(+173 files in other folders)
